Fix text-align in media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,7 +415,7 @@ footer {
     }
 
     .navigation {
-        text-align: center;
+        text-align: left;
     }
 
     .navigation li a {
